--- a/index.html
+++ b/index.html
@@ -61,8 +61,7 @@
 			</div>
 		</div>
 		<div id="copyright">
-			Inspired by <a href="http://www.openrise.com/lab/FlowerPower/">FlowerPower</a> project.<br />
-			Copyright © 2011 <a href='http://hackerzhou.me'>hackerzhou.me</a> 2009-2011
+			Copyright © 2016 <a href='https://github.com/xyy430104/'>xyy430104</a> 2016
 		</div>
 	</div>
 	<script type="text/javascript">
