--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 				<span class="space"/><span class="comments">* We are both Fudan SSers and programmers,</span><br />
 				<span class="space"/><span class="comments">* so I write some code to celebrate our 1st anniversary.</span><br />
 				<span class="space"/><span class="comments">*/</span><br />
-				Boy i = <span class="keyword">new</span> Boy(<span class="string">"hackerzhou"</span>);<br />
-				Girl u = <span class="keyword">new</span> Girl(<span class="string">"MaryNee"</span>);<br />
+				Boy i = <span class="keyword">new</span> Boy(<span class="string">"Xiaoyy"</span>);<br />
+				Girl u = <span class="keyword">new</span> Girl(<span class="string">"Meizhu"</span>);<br />
 				<span class="comments">// Nov 2, 2010, I told you I love you. </span><br />
 				i.love(u);<br />
 				<span class="comments">// Luckily, you accepted and became my girlfriend eversince.</span><br />
@@ -50,12 +50,12 @@
 				<canvas id="garden"></canvas>
 				<div id="words">
 					<div id="messages">
-						Minyue, I have fallen in love with you for
+						Meizhu, i have recogenized with you for
 						<div id="elapseClock"></div>
 					</div>
 					<div id="loveu">
-						Love u forever and ever.<br/>
-						<div class="signature">- hackerzhou</div>
+						Be with u forever.<br/>
+						<div class="signature">- xiaoyy</div>
 					</div>
 				</div>
 			</div>
@@ -68,9 +68,9 @@
 		var offsetX = $("#loveHeart").width() / 2;
 		var offsetY = $("#loveHeart").height() / 2 - 55;
 		var together = new Date();
-		together.setFullYear(2010, 10, 2);
-		together.setHours(20);
-		together.setMinutes(0);
+		together.setFullYear(2016, 10, 1);
+		together.setHours(21);
+		together.setMinutes(15);
 		together.setSeconds(0);
 		together.setMilliseconds(0);
 		
