--- a/index.html
+++ b/index.html
@@ -20,29 +20,28 @@
 		<div id="content">
 			<div id="code">
 				<span class="comments">/**</span><br />
-				<span class="space"/><span class="comments">* We are both Fudan SSers and programmers,</span><br />
-				<span class="space"/><span class="comments">* so I write some code to celebrate our 1st anniversary.</span><br />
+				<span class="space"/><span class="comments">*  I write some code to celebrate our 1st Christmas.</span><br />
 				<span class="space"/><span class="comments">*/</span><br />
 				Boy i = <span class="keyword">new</span> Boy(<span class="string">"Xiaoyy"</span>);<br />
 				Girl u = <span class="keyword">new</span> Girl(<span class="string">"Meizhu"</span>);<br />
 				<span class="comments">// Nov 2, 2010, I told you I love you. </span><br />
 				i.love(u);<br />
-				<span class="comments">// Luckily, you accepted and became my girlfriend eversince.</span><br />
+				<span class="comments">// Luckily, I met u by our friends.</span><br />
 				u.accepted();<br />
-				<span class="comments">// Since then, I miss u every day.</span><br />
+				<span class="comments">// Since then, I miss u every day and night.</span><br />
 				i.miss(u);<br />
-				<span class="comments">// And take care of u and our love.</span><br />
+				<span class="comments">// And take care of u and my love.</span><br />
 				i.takeCareOf(u);<br />
-				<span class="comments">// You say that you won't be so easy to marry me.</span><br />
-				<span class="comments">// So I keep waiting and I have confidence that you will.</span><br />
+				<span class="comments">// Whatever You say that you won't be so easy to accpet me.</span><br />
+				<span class="comments">//  I keep waiting and I have confidence that you will.</span><br />
 				<span class="keyword">boolean</span> isHesitate = <span class="keyword">true</span>;<br />
 				<span class="keyword">while</span> (isHesitate) {<br />
 				<span class="placeholder"/>i.waitFor(u);<br />
-				<span class="placeholder"/><span class="comments">// I think it is an important decision</span><br />
-				<span class="placeholder"/><span class="comments">// and you should think it over.</span><br />
+				<span class="placeholder"/><span class="comments">// I think it is an important decision.</span><br />
+				<span class="placeholder"/><span class="comments">// Until then, i just want to make you happier, become a member in dailylife.</span><br />
 				<span class="placeholder"/>isHesitate = u.thinkOver();<br />
 				}<br />
-				<span class="comments">// After a romantic wedding, we will live happily ever after.</span><br />
+				<span class="comments">// </span><br />
 				i.marry(u);<br />
 				i.liveHappilyWith(u);<br />
 			</div>
@@ -54,7 +53,7 @@
 						<div id="elapseClock"></div>
 					</div>
 					<div id="loveu">
-						Be with u forever.<br/>
+						Will be with u forever.<br/>
 						<div class="signature">- xiaoyy</div>
 					</div>
 				</div>
