--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
 		<div id="content">
 			<div id="code">
 				<span class="comments">/**</span><br />
-				<span class="space"/><span class="comments">*  I write some code to celebrate our 1st Christmas.</span><br />
+				<span class="space"/><span class="comments">*  Write some code to celebrate our 1st Christmas.</span><br />
 				<span class="space"/><span class="comments">*/</span><br />
 				Boy i = <span class="keyword">new</span> Boy(<span class="string">"Xiaoyy"</span>);<br />
 				Girl u = <span class="keyword">new</span> Girl(<span class="string">"Meizhu"</span>);<br />
-				<span class="comments">// Nov 2, 2010, I told you I love you. </span><br />
-				i.love(u);<br />
+				<span class="comments">// Oct 1, 2016, we exchanged wechat. </span><br />
+				i.meet(u);<br />
 				<span class="comments">// Luckily, I met u by our friends.</span><br />
 				u.accepted();<br />
 				<span class="comments">// Since then, I miss u every day and night.</span><br />
@@ -53,7 +53,7 @@
 						<div id="elapseClock"></div>
 					</div>
 					<div id="loveu">
-						Will be with u forever.<br/>
+						Be with u forever.<br/>
 						<div class="signature">- xiaoyy</div>
 					</div>
 				</div>
