--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 				<span class="comments">// Oct 1, 2016, we exchanged wechat. </span><br />
 				i.meet(u);<br />
 				<span class="comments">// Luckily, I met u by our friends.</span><br />
-				u.accepted();<br />
+				u.attracted(i);<br />
 				<span class="comments">// Since then, I miss u every day and night.</span><br />
 				i.miss(u);<br />
 				<span class="comments">// And take care of u and my love.</span><br />
@@ -42,7 +42,7 @@
 				<span class="placeholder"/>isHesitate = u.thinkOver();<br />
 				}<br />
 				<span class="comments">// </span><br />
-				i.marry(u);<br />
+				u.accepted(i);<br />
 				i.liveHappilyWith(u);<br />
 			</div>
 			<div id="loveHeart">
