--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
 		<div id="content">
 			<div id="code">
 				<span class="comments">/**</span><br />
-				<span class="space"/><span class="comments">* We are both Fudan SSers and programmers,</span><br />
-				<span class="space"/><span class="comments">* so I write some code to celebrate our 1st anniversary.</span><br />
+				<span class="space"/><span class="comments">* We are both high school students,</span><br />
+				<span class="space"/><span class="comments">* And I .</span><br />
 				<span class="space"/><span class="comments">*/</span><br />
-				Boy i = <span class="keyword">new</span> Boy(<span class="string">"hackerzhou"</span>);<br />
-				Girl u = <span class="keyword">new</span> Girl(<span class="string">"MaryNee"</span>);<br />
-				<span class="comments">// Nov 2, 2010, I told you I love you. </span><br />
+				Boy i = <span class="keyword">new</span> Boy(<span class="string">"Zhaoyue"</span>);<br />
+				Girl u = <span class="keyword">new</span> Girl(<span class="string">"Wangxioayu"</span>);<br />
+				<span class="comments">// Oct. 21, 2016, I told you I like you. </span><br />
 				i.love(u);<br />
-				<span class="comments">// Luckily, you accepted and became my girlfriend eversince.</span><br />
+				<span class="comments">// Although you didn't promise me.</span><br />
 				u.accepted();<br />
 				<span class="comments">// Since then, I miss u every day.</span><br />
 				i.miss(u);<br />
@@ -50,12 +50,12 @@
 				<canvas id="garden"></canvas>
 				<div id="words">
 					<div id="messages">
-						Minyue, I have fallen in love with you for
+						Wangxiaoyu, I have fallen in love with you for
 						<div id="elapseClock"></div>
 					</div>
 					<div id="loveu">
-						Love u forever and ever.<br/>
-						<div class="signature">- hackerzhou</div>
+						I will <br/>
+						<div class="signature">- zhaoyue</div>
 					</div>
 				</div>
 			</div>
