--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 			<div id="code">
 				<span class="comments">/**</span><br />
 				<span class="space"/><span class="comments">* We are both high school students,</span><br />
-				<span class="space"/><span class="comments">* And I .</span><br />
+				<span class="space"/><span class="comments">* And I  .</span><br />
 				<span class="space"/><span class="comments">*/</span><br />
 				Boy i = <span class="keyword">new</span> Boy(<span class="string">"Zhaoyue"</span>);<br />
-				Girl u = <span class="keyword">new</span> Girl(<span class="string">"Wangxioayu"</span>);<br />
+				Girl u = <span class="keyword">new</span> Girl(<span class="string">"Wangxiaoyu"</span>);<br />
 				<span class="comments">// Oct. 21, 2016, I told you I like you. </span><br />
 				i.love(u);<br />
 				<span class="comments">// Although you didn't promise me.</span><br />
@@ -33,18 +33,13 @@
 				i.miss(u);<br />
 				<span class="comments">// And take care of u and our love.</span><br />
 				i.takeCareOf(u);<br />
-				<span class="comments">// You say that you won't be so easy to marry me.</span><br />
+				<span class="comments">// You say that you won't be so easy to promise me now.</span><br />
 				<span class="comments">// So I keep waiting and I have confidence that you will.</span><br />
-				<span class="keyword">boolean</span> isHesitate = <span class="keyword">true</span>;<br />
-				<span class="keyword">while</span> (isHesitate) {<br />
-				<span class="placeholder"/>i.waitFor(u);<br />
-				<span class="placeholder"/><span class="comments">// I think it is an important decision</span><br />
-				<span class="placeholder"/><span class="comments">// and you should think it over.</span><br />
-				<span class="placeholder"/>isHesitate = u.thinkOver();<br />
-				}<br />
-				<span class="comments">// After a romantic wedding, we will live happily ever after.</span><br />
-				i.marry(u);<br />
-				i.liveHappilyWith(u);<br />
+			        <span class="comments">// ............</span><br />
+				<span class="comments">// ............</span><br />
+				<span class="comments">// ............</span><br />
+				<span class="comments">// The story will never have its ending.</span><br />
+				I will go on write the story;<br />
 			</div>
 			<div id="loveHeart">
 				<canvas id="garden"></canvas>
@@ -54,8 +49,8 @@
 						<div id="elapseClock"></div>
 					</div>
 					<div id="loveu">
-						I will <br/>
-						<div class="signature">- zhaoyue</div>
+						I will say "I Love You" later . <br/>
+						<div class="signature">- Zhaoyue</div>
 					</div>
 				</div>
 			</div>
