--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<html xmlns="http://back1984.com" xml:lang="en" lang="en">
 <head>
 	<title>Our Love Story</title>
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
@@ -21,16 +21,18 @@
 			<div id="code">
 				<span class="comments">/**</span><br />
 				<span class="space"/><span class="comments">* We are both high school students,</span><br />
-				<span class="space"/><span class="comments">* And I  .</span><br />
+				<span class="space"/><span class="comments">* It's our story .</span><br />
 				<span class="space"/><span class="comments">*/</span><br />
 				Boy i = <span class="keyword">new</span> Boy(<span class="string">"Zhaoyue"</span>);<br />
 				Girl u = <span class="keyword">new</span> Girl(<span class="string">"Wangxiaoyu"</span>);<br />
-				<span class="comments">// Oct. 21, 2016, I told you I like you. </span><br />
-				i.love(u);<br />
-				<span class="comments">// Although you didn't promise me.</span><br />
-				u.accepted();<br />
+				<span class="comments">// Sep.1, 2016, The first time we meet. </span><br />
+				i.meet(u);<br />
 				<span class="comments">// Since then, I miss u every day.</span><br />
-				i.miss(u);<br />
+				i.miss(u);<br />				
+				<span class="comments">// Oct. 21, 2016, I told you I like you. </span><br />
+				i.like(u);<br />
+				<span class="comments">// Although you didn't promise me.</span><br />
+				u.refused();<br />
 				<span class="comments">// And take care of u and our love.</span><br />
 				i.takeCareOf(u);<br />
 				<span class="comments">// You say that you won't be so easy to promise me now.</span><br />
