--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html xmlns="http://back1984.com" xml:lang="en" lang="en">
 <head>
-	<title>Our Love Story</title>
+	<title>Our time</title>
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 	<style type="text/css">
 		@font-face {
@@ -33,11 +33,10 @@
 				i.like(u);<br />
 				<span class="comments">// Although you didn't promise me.</span><br />
 				u.refused();<br />
-				<span class="comments">// And take care of u and our love.</span><br />
-				i.takeCareOf(u);<br />
 				<span class="comments">// You say that you won't be so easy to promise me now.</span><br />
 				<span class="comments">// So I keep waiting and I have confidence that you will.</span><br />
-			        <span class="comments">// ............</span><br />
+			        <span class="comments">// I am making myself better.</span><br />
+				<span class="comments">// ............</span><br />				
 				<span class="comments">// ............</span><br />
 				<span class="comments">// ............</span><br />
 				<span class="comments">// The story will never have its ending.</span><br />
