--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 				<span class="comments">// You say that you won't be so easy to promise me now.</span><br />
 				<span class="comments">// So I keep waiting and I have confidence that you will.</span><br />
 			        <span class="comments">// I will make myself better.</span><br />
-				<span class="comments">// Feb.5.2017,Happy Birthday to you.</span><br />
+				<span class="comments">// Feb.5.2017,Happy Birthday to you (＠^^＠) 。</span><br />
 				<span class="comments">// ............</span><br />
 				<span class="comments">// ............</span><br />
 				<span class="comments">// ............</span><br />
