--- a/index.html
+++ b/index.html
@@ -38,22 +38,9 @@
 				<span class="keyword"></span><span class="keyword"></span><br />
 				<span class="keyword"></span><br />
 				<span class="placeholder"/><br />
-
-                                <span class="keyword">boolean</span> isHesitate = <span class="keyword">true</span>;<br />
-				<span class="keyword">while</span> (isHesitate) {<br />
-				<span class="placeholder"/>i.waitFor(u);<br />
-				<span class="placeholder"/><span class="comments">// I think it is an important decision</span><br />
-				<span class="placeholder"/><span class="comments">// and you should think it over.</span><br />
-				<span class="placeholder"/>isHesitate = u.thinkOver();<br />
-				}<br />
-				<span class="comments">// After a romantic wedding, we will live happily ever after.</span><br />
-				i.marry(u);<br />
-				i.liveHappilyWith(u);<br />
-
-
-
 				<span class="comments">// 女生节</span><br />
 				<span class="comments">// 愿你拥有最靓的心情，享受最好的岁月.</span><br />
+                                <span class="keyword"></span><br />
 				<span class="comments">// 今天的你容颜绝对最美丽，打扮绝对最亮丽，生活绝对永远有活力.</span><br />
 				
 			</div>
